--- a/project_banapaj/site/css/main.css
+++ b/project_banapaj/site/css/main.css
@@ -2,11 +2,13 @@
     body {
         background-color: #ecf0f1;
         margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     header {
-        background-color: #bdc3c7;
+        background-color: #f1c40f;
         width: 100%;
+        border-bottom: #34495e solid 3px;
     }
 
     .logo {
@@ -14,28 +16,41 @@
     }
 
     main {
-        font-family: Arial, Helvetica, sans-serif;
         font-size: 2em;
         display: flex;
         flex-direction: column;
         text-align: center;
         width: 100%;
-        background-color: #e74c3c;
+
     }
 
     nav {
-        height: 400px;
         width: 100%;
-        background-color: #f1c40f;
+        background-color: #f39c12;
+        font-size: 4em;
+        display: flex;
+        font-weight: bold;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .navtext {
+        border-bottom: #2c3e50 solid 5px;
+        padding: 20px 0px 20px 0px;
+        width: 100%;
+        text-align: center;
+        text-decoration: none;
+        color: black;
     }
 
     .buttonnav {
-        height: 60px;
+        height: 80px;
         width: 100px;
-        background-color: #2ecc71;
         position: absolute;
         right: 0;
-        top: 0;
+        top: 20px;
+        display: flex;
+        flex-direction: column;
     }
 
     .docked{
@@ -46,6 +61,38 @@
     {
         width: 100%;
         height: 100%;
+    }
+
+    .streck {
+        background-color: #7f8c8d;
+        height: 10px;
+        width: 70px;
+        margin: 10px 0px 5px 15px;
+    }
+
+    ul {
+        list-style: none;
+    }
+
+    footer {
+        width: 100%;
+        height: 100px;
+        background-color: #bdc3c7;
+        display: flex; 
+        align-items: center;
+        flex-direction: row;
+        border-top: #34495e solid 3px;
+        font-size: 0.9em;
+    }
+
+    .copyright {
+        margin-left: 25px;
+        
+    }
+
+     .copyright2 {
+        margin-left: 415px;
+        
     }
 
 }
